# cis1-webui-native-srv-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  auth_manager.cpp  auth_manager.h  base64.cpp  base64.h  base_cis_srv_exception.cpp  base_cis_srv_exception.h  base_websocket_event_handler.cpp  base_websocket_event_handler.h  basic_websocket_session.h  bound_task_chain.h  child_process.cpp  child_process.h  cis_dirs.cpp  cis_dirs.h  cis_util.cpp  cis_util.h  conanfile.py  conanfile.txt  cookie_parser.cpp  cookie_parser.h  cron_utils.cpp  database.cpp  database.h  database_structures.h  db_dirs.cpp  db_dirs.h  dirs.cpp  dirs.h  example_config.ini  fail.h  file_handler.cpp  file_handler.h  file_util.cpp  file_util.h  (+53 more)
.tscis/: build.sh
beast_ext/: basic_multipart_form_body.h  knuth_morris_pratt_searcher.cpp  knuth_morris_pratt_searcher.h  message_stream_parser.cpp  multipart_stream_parser.cpp  sink_body.h
cis/: cis_manager.cpp  cis_manager.h  cis_structs.cpp  cis_structs.h  dirs.h  fs_mapper.cpp  fs_mapper.h  job.cpp  job.h  project_list.cpp  project_list.h
docs/: devguide.md
exceptions/: base_cis_srv_exception.cpp  base_cis_srv_exception.h  generic_error.cpp  generic_error.h  load_config_error.cpp  load_config_error.h
http/: common_handlers.cpp  common_handlers.h  cookie_parser.cpp  cookie_parser.h  download_handler.cpp  download_handler.h  error_handler.cpp  error_handler.h  file_handler.cpp  file_handler.h  handlers_chain.cpp  handlers_chain.h  multipart_form_handler.cpp  multipart_form_handler.h  request_util.cpp  request_util.h  response.cpp  response.h  router.h  url.h  webhooks_handler.cpp  webhooks_handler.h
http_root/: chat_client.html  index.html  index_auth_ok.html
include/: application.h  auth_manager.h  auth_manager_interface.h  base64.h  bound_task_chain.h  child_process.h  configuration_manager.h  cron_utils.h  database.h  database_structures.h  error_code.h  file_util.h  fs_cache.h  fs_cache_node.h  immutable_container_proxy.h  init.h  logger.h  path_utils.h  random_generator.h  request_context.h  rights_manager.h  rights_manager_interface.h  version.h.in
include/beast_ext/: basic_multipart_form_body.h  knuth_morris_pratt_searcher.h  message_stream_parser.h  multipart_form_body.h  multipart_stream_parser.h  sink_body.h
include/cis/: cis_job.h  cis_manager.h  cis_manager_interface.h  cis_structs.h  cis_structs_interface.h  dirs.h  offline_session.h  session.h  session_interface.h  session_manager.h
include/exceptions/: base_cis_srv_exception.h  generic_error.h  load_config_error.h
include/http/: common_handlers.h  cookie_parser.h  download_handler.h  error_handler.h  file_handler.h  handle_result.h  handlers_chain.h  multipart_form_handler.h  request_util.h  response.h  router.h  url.h  webhooks_handler.h
include/net/: basic_websocket_session.h  fail.h  http_handler_interface.h  http_session.h  listener.h  queued_websocket_session.h  socket_util.h  websocket_queue.h
include/openssl_wrapper/: openssl_wrapper.h
include/sqlite_orm_ext/: optional_type_ext.h
include/tpl_helpers/: apply_range.h  ct_string.h  ct_string_decl.h  for_types.h  nonesuch.h  type_tag.h
include/tpl_reflect/: json_engine.h  meta_converter.h
include/websocket/: event_handlers.h  queue_interface.h  transaction.h  transaction_handle.h
net/: basic_websocket_session.cpp  basic_websocket_session.h  fail.cpp  fail.h  http_handler_interface.h  http_session.cpp  http_session.h  http_session_queue.h  listener.cpp  listener.h  queued_websocket_session.cpp  queued_websocket_session.h  router.cpp  router.h  socket_util.cpp  websocket_queue.cpp
openssl_wrapper/: openssl_wrapper.cpp  openssl_wrapper.h
sqlite_orm_ext/: optional_type_ext.h
src/: application.cpp  auth_manager.cpp  base64.cpp  bound_task_chain.cpp  child_process.cpp  cron_utils.cpp  database.cpp  error_code.cpp  file_util.cpp  fs_cache.cpp  init.cpp  logger.cpp  main.cpp  path_utils.cpp  random_generator.cpp  request_context.cpp  rights_manager.cpp
src/beast_ext/: knuth_morris_pratt_searcher.cpp  message_stream_parser.cpp  multipart_stream_parser.cpp
src/cis/: cis_job.cpp  cis_manager.cpp  cis_structs.cpp  dirs.cpp  fs_mapper.cpp  offline_session.cpp  session.cpp  session_manager.cpp
src/exceptions/: base_cis_srv_exception.cpp
src/http/: common_handlers.cpp  cookie_parser.cpp  download_handler.cpp  error_handler.cpp  file_handler.cpp  handlers_chain.cpp  multipart_form_handler.cpp  request_util.cpp  response.cpp  webhooks_handler.cpp
src/net/: basic_websocket_session.cpp  fail.cpp  http_session.cpp  listener.cpp  queued_websocket_session.cpp  socket_util.cpp  websocket_queue.cpp
src/openssl_wrapper/: openssl_wrapper.cpp
src/tpl_reflect/: json_engine.cpp
src/websocket/: event_dispatcher.cpp  transaction.cpp
test_package/: CMakeLists.txt  conanfile.py
tpl_helpers/: ct_string_decl.h  ct_string_def.h  ct_string_undef.h  detect_idiom.h  overloaded.h  tuple_cast.h
tpl_reflect/: json_engine.cpp  json_engine.h  meta_converter.h
websocket/: base_event_handler.cpp  base_event_handler.h  const_stream_adapter.h  event_dispatcher.cpp  event_dispatcher.h  event_handlers.cpp  event_handlers.h  event_list.h  protocol_message.h  transaction.cpp  transaction.h
websocket/dto/: add_cis_cron_request.h  add_cis_cron_response.h  auth_error_wrong_credentials.h  auth_login_pass.h  auth_login_pass_request.h  auth_login_pass_response.h  auth_login_pass_success.h  auth_logout.h  auth_logout_success.h  auth_token.h  auth_token_request.h  auth_token_response.h  change_group_request.h  change_group_response.h  change_pass_request.h  change_pass_response.h  cis_build_error_doesnt_exist.h  cis_build_info.h  cis_build_info_success.h  cis_cron_add.h  cis_cron_add_success.h  cis_cron_list.h  cis_cron_list_success.h  cis_cron_remove.h  cis_cron_remove_success.h  cis_job_error_doesnt_exist.h  cis_job_error_invalid_params.h  cis_job_info.h  cis_job_info_success.h  cis_job_run.h  cis_job_run_success.h  cis_project_error_doesnt_exist.h  cis_project_info.h  cis_project_info_success.h  (+84 more)
(+253 files in other folders)
